# apps/api/operations/item.ts
@@ -1,4 +1,4 @@
-import { PrismaClient } from "@prisma/client";
+import { PrismaClient, Prisma } from "@prisma/client";
 import { Request, Response } from "express";
 import { getLog } from "../utils/log";
 import { toHiragana, toKatakana } from "../utils/japanese";
@@ -6,6 +6,7 @@ import { toHiragana, toKatakana } from "../utils/japanese";
 export const itemOprations = (prisma: PrismaClient) => {
   return {
     getItem: get(prisma),
+    createItem: post(prisma),
   };
 };
 
@@ -49,5 +50,26 @@ const get =
       res.json(items);
     } catch (e) {
       next(e);
+    }
+  };
+
+const post =
+  (prisma: PrismaClient) => async (req: Request, res: Response, next: any) => {
+    console.log(req.body);
+    try {
+      const item = await prisma.item.create({ data: req.body });
+      res.json(item);
+    } catch (e: unknown) {
+      console.log((e as Error).message);
+      if (e instanceof Prisma.PrismaClientKnownRequestError) {
+        if (e.code === "P2002") {
+          const message = `Unique constraint failed on the ${e.meta?.target}`;
+          res.status(500).json({ code: e.code, message });
+        } else {
+          next(e);
+        }
+      } else {
+        next(e);
+      }
     }
   };
